fix issue on Firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ body {
   width: 100%;
   transform: translateX(0);
   transition: all 0.5s var(--transition-curve);
+  flex-shrink: 0;
 }
 
 .slider__photo--active {
